<?xml version="1.0"?>
<package>
  <!-- Package info /-->
  <name>rcppm2ros</name>
  <version>0.1.0</version>
  <description>ROS package for reading parallel PPM data from an rc reciver. Uses an arduino sketch for a Sparkfun Pro Micro with rosserial_arduino.</description>
  <maintainer email="permagnus@gmail.com">Per Magnus Auby</maintainer>
  <author email="permagnus@gmail.com">Per Magnus Auby</author>
  <license>GPLv3</license>
  <url type="Repository">http://github.com/Supersopp/rcppm2ros</url> -->

  <!-- Dependencies /--> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <run_depend>rosserial_python</run_depend>

</package>
